added basic html

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,27 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <div id="wrapper">
+		<div id="branding"><img id="logo" src="img/logo.gif" alt="Some
+		logo"></div>
+		<div id="meu">
+		<ul>
+		<li><a href="#">Services</a></li>
+		<li><a href="#">Cooling</a></li>
+		<li><a href="#">Heating</a></li>
+		<li><a href="#">About</a></li>
+		<li><a href="#">Contact</a></li>
+		</ul>
+		</div>
+	<div id="content">
+		<div id="article_heading"><h1>Call us not for an estimate at
+		1-800-555-5555</h1></div>
+		<div id="article_body">
+		<div id="article_photo">
+		</div>
+		</div>
+	<div id="sidebar">sidebar</div>
+	<div id="foot"><footer</div>	
 
         <script src="js/vendor/jquery.min.js"></script>
         <script src="js/plugins.js"></script>
