added some content

--- a/src/index.html
+++ b/src/index.html
@@ -23,23 +23,62 @@
         <div id="wrapper">
 		<div id="branding"><img id="logo" src="img/logo.gif" alt="Some
 		logo"></div>
-		<div id="meu">
+		<div id="menu">
 		<ul>
-		<li><a href="#">Services</a></li>
-		<li><a href="#">Cooling</a></li>
-		<li><a href="#">Heating</a></li>
-		<li><a href="#">About</a></li>
-		<li><a href="#">Contact</a></li>
+		<li><a href="#">SERVICES</a></li>
+		<li><a href="#">COOLING</a></li>
+		<li><a href="#">HEATING</a></li>
+		<li><a href="#">ABOUT</a></li>
+		<li><a href="#">CONTACT</a></li>
 		</ul>
 		</div>
 	<div id="content">
-		<div id="article_heading"><h1>Call us not for an estimate at
-		1-800-555-5555</h1></div>
+		<div id="article_heading"><h1>Call us now for an estimate at
+		1-800-555-5555</h1>
+		<h6>We're dedicated to making sure your family or business is
+		as comfortable as possible</h6>
+		<h6>SERVING CLIFTON AND ALL OF NORTHERN NEW JERSEY</h6></div>
 		<div id="article_body">
 		<div id="article_photo">
 		</div>
+		<table>
+
+		<tr>
+		<td style="padding:5px;">Welcome to Empire Heating & Cooling</td>
+		<td><li>Full Insured/Owner Operated</li></td>
+		</tr>
+		<tr>
+		<td style="padding:5px;">
+		Whether you need to repair, replace, upgrade or even add a new
+		system, our</td>
+		<td style="padding:5px;"><li>Trained and experienced engineers, technicians, and installers</li></td>
+		</tr>
+		<tr>
+		<td style="padding:5px;">
+		products are designed to make you more comfortable. We have the
+		knowledge</td>
+		<td style="padding:5px;"><li>Trouble-free installation and service calls</li></td>
+		</tr>
+		<tr>
+		<td style="padding:5px;">
+		and expertise to help you choose the right heating and air
+		conditioning system</td>
+		<td style="padding:5px;"><li>TQM: Total Quality Program</li><td>
+		</tr>
+		<tr>
+		<td style="padding:5px;">
+		to meet your needs so that you benefit from increased
+		efficiency, reliability,</td>
+		<td style="padding:5px;"><li>Exeptional customer service from start to finish</li></td>
+		<tr>
+		<td style="padding:5px;">
+		and control of your home or businesses' indoor environment.
+		</td>
+		<td style="padding:5px;"><li>Service and preventative maintenance contracts</li>
+		</td>
+		</tr>
+		</table>
 		</div>
-	<div id="sidebar">sidebar</div>
 	<div id="foot"><footer</div>	
 
         <script src="js/vendor/jquery.min.js"></script>
