addded more html

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 
         <!-- Add your site or application content here -->
         <div id="wrapper">
-		<div id="branding"><img id="logo" src="img/logo.gif" alt="Some
+		<div id="branding"><img id="logo" src="img/leftlogo_zpsda657001.jpg" alt="Some
 		logo"></div>
 		<div id="menu">
 		<ul>
@@ -40,6 +40,10 @@
 		<h6>SERVING CLIFTON AND ALL OF NORTHERN NEW JERSEY</h6></div>
 		<div id="article_body">
 		<div id="article_photo">
+			<img src="img/video_zpsaf6b385c.jpg">
+		</div>
+		<div id="facebook_bar">	
+			<img src="img/facebook_zpsa451d1e9.jpg">
 		</div>
 		<table>
 
@@ -78,6 +82,28 @@
 		</td>
 		</tr>
 		</table>
+		<!--<div id="container">
+		<div>
+			<p class="main">Welcome to Empire Heating & Cooling
+			Whether you need to repair, replace, upgrade or even add a new system, our
+			products are designed to make you more comfortable. We have the knowledge
+			and expertise to help you choose the right heating and air conditioning system
+			to meet your needs so that you benefit from increased efficiency, reliability,
+			and control of your home or businesses' indoor environment.</p>
+
+			<p class="sidelist"><ul> 
+			<li>Full Insured / Owner Operated</li>
+			<li>Trained and experienced engineers, technicians and installers</li>
+			<li>Trouble-free installation and service calls</li>
+			<li>TQM: Total Quality Program</li>
+			<li>Exceptional customer service from start to finish</li>
+			<li>Service and preventative maintenance contracts</li>
+			</ul></p>
+		</div>-->
+		<table>
+			<tr><td></td></tr>
+		</table>
+
 		</div>
 	<div id="foot"><footer</div>	
 
