finished adding content

--- a/src/index.html
+++ b/src/index.html
@@ -100,12 +100,45 @@
 			<li>Service and preventative maintenance contracts</li>
 			</ul></p>
 		</div>-->
-		<table>
-			<tr><td></td></tr>
-		</table>
+		<div id="content_table">
+			<img src="img/table_zps6267b141.jpg"></div>
+		
+		<div id="heating_content">
+		<p class="first">Heating</p>
+		<p>Our goal is to keep you warm and comfortable through the winter months. We know which
+		products and systems will work best for you.
+		Our recommendations will always keep your requirements and budget in mind. We'll respond
+		to your requests and act quickly when you call.
+		Nothing is more important than your peace of mind when the weather is cold.
+		</p>
+		<div id="heating_photos">
+			<img src="img/heatingpics_zpsdc144daf.jpg"></div>
+		</div>
+		
+		<div id="cooling_content">
+		<p class="cfirst">Cooling</p>
+		<p>Central air conditioning helps keep your environment cool and reduces humidity levels. As
+		the central air conditioning system draws air out
+		of various rooms in your house or business through return air ducts, the air is pulled
+		through an air filter, which removed airborne particles
+		such as dust and lint. The filtered air is then routed to air supply ductwork that carries it
+		back to the rooms.
+		</p>
+		<img src="img/coolingpics_zpsfb6fcc69.jpg">	
 
 		</div>
-	<div id="foot"><footer</div>	
+	<div id="footer">
+		<p class="about"> About Us</p>
+		<p>
+	Our goal is to keep you warm and comfortable through the winter months. We know which products and
+	systems will work best for you.
+	Our recommendations will always keep your requirements and budget in mind. We'll respond to your
+	requests and act quickly when you call.
+	Nothing is more important than your peace of mind when the weather is cold.
+		</p>
+		<img src="img/footerlogos_zps70c0c799.jpg">
+	</div>
+	</div>	
 
         <script src="js/vendor/jquery.min.js"></script>
         <script src="js/plugins.js"></script>
