--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 
         <!-- Add your site or application content here -->
         <div id="wrapper">
-		<div id="branding"><img id="logo" src="img/leftlogo_zpsda657001.jpg" alt="Some
+		<div id="branding"><img id="logo" src="img/logo_zps992c4103.jpg" alt="Some
 		logo"></div>
 		<div id="menu">
 		<ul>
@@ -35,9 +35,10 @@
 	<div id="content">
 		<div id="article_heading"><h1>Call us now for an estimate at
 		1-800-555-5555</h1>
-		<h6>We're dedicated to making sure your family or business is
-		as comfortable as possible</h6>
-		<h6>SERVING CLIFTON AND ALL OF NORTHERN NEW JERSEY</h6></div>
+		<p class="heading2">We're dedicated to making sure your family or business is
+		as comfortable as possible</p>
+		<p class="heading3">SERVING CLIFTON AND ALL OF NORTHERN NEW JERSEY</p>
+		</div>
 		<div id="article_body">
 		<div id="article_photo">
 			<img src="img/video_zpsaf6b385c.jpg">
@@ -124,9 +125,10 @@
 		such as dust and lint. The filtered air is then routed to air supply ductwork that carries it
 		back to the rooms.
 		</p>
-		<img src="img/coolingpics_zpsfb6fcc69.jpg">	
-
+		<div id="cooling_photos">
+		<img src="img/coolingpics_zpsfb6fcc69.jpg"></div>	
 		</div>
+		
 	<div id="footer">
 		<p class="about"> About Us</p>
 		<p>
@@ -136,10 +138,10 @@
 	requests and act quickly when you call.
 	Nothing is more important than your peace of mind when the weather is cold.
 		</p>
-		<img src="img/footerlogos_zps70c0c799.jpg">
-	</div>
+		<div id="footer_photo"><img src="img/footerlogos_zps70c0c799.jpg"></div>
 	</div>	
-
+	</div>
+	</div>
         <script src="js/vendor/jquery.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
